--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Matt Jenkins <matt@majenko.co.uk>
 sentence=Simple integer FFT library
 paragraph=Simple FFT library\n
 url=https://github.com/MajenkoLibraries/FFT
-category=Math
+category=Data Processing
 architectures=*
 includes=FFT.h
